make-a-wish-salesforce/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Case Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Diagnosis Verification Support Process</fullName>
        <description>This Support process is used to display the values for Diagnosis Verification record type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Denied</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Medical Eligible</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Parent Wish Support process</fullName>
        <description>This support process used to assign with parent wishes</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Granted</fullName>
        </values>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Ready to Assign</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Additional_Requests__c</fullName>
        <description>It holds the wish child additional requests</description>
        <label>Additional Requests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_requested_wish_participants_reside_w__c</fullName>
        <description>It describes whether all requested wish participants resides with wish child?</description>
        <label>All participants reside with wish child</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_impact_your_ability_to_join_wish__c</fullName>
        <description>It  captures the details of  participant situation</description>
        <inlineHelpText>Is there anything on your family’s calendar (upcoming medical treatments, school or work commitments,
planned vacations, etc.) that might impact your ability to participate in a wish?</inlineHelpText>
        <label>Any impact your ability to join wish</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Automobile_insurance_provide_coverage__c</fullName>
        <description>It capture details about automobile insurance coverage for a rental car</description>
        <inlineHelpText>Does your automobile insurance provide coverage while using a rental car?</inlineHelpText>
        <label>Automobile insurance provide coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Availability2__c</fullName>
        <description>It indicate time periods in which your family will have the greatest availability for
fulfilment  the wish.</description>
        <label>Availability Time Period 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availability3__c</fullName>
        <description>It indicates the time periods in which your family will have the greatest availability for 
fulfilment of the wish.</description>
        <label>Availability Time Period 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availability_1__c</fullName>
        <description>It indicates the time periods in which your family will have the greatest availability
for fulfilment  the wish.</description>
        <label>Availability Time Period 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <description>It will holds the wish child birthday date.</description>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bringing_Own_Wheel_Chair__c</fullName>
        <description>It defines, participants who bring their own wheel chair.</description>
        <label>Bringing Own Wheel Chair</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Comment__c</fullName>
        <description>This field update is used to update case comment field on case when ever the case comment is created</description>
        <label>Case Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Member_Count__c</fullName>
        <description>It  displays the total number of case team member added to the case.</description>
        <label>Case Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_Medical_Advisor_Phone__c</fullName>
        <description>This field is used to store the phone value of  &quot;Chapter Medical Advisor Phone&quot;</description>
        <label>Chapter Medical Advisor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Chapter_Name__c</fullName>
        <description>This field holds the state name</description>
        <label>Chapter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Chapter_Email__c</fullName>
        <description>This field is used to store the chapter email.</description>
        <formula>Account.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Chapter Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Chapter_Name__c</fullName>
        <description>This Hidden field is used to store the Chapter Name value.</description>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Chapter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Chapter_Phone__c</fullName>
        <description>This field is used to store the chapter phone value</description>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Chapter Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Lead_Id__c</fullName>
        <label>Hidden Lead Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Lead_Name__c</fullName>
        <description>This field is used to store the Lead Name</description>
        <formula>Lead__r.FirstName+ &apos; &apos;+ &apos; &apos;+Lead__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Primary_Diagnosis__c</fullName>
        <formula>Lead__r.PD_Condition_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Primary Diagnosis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Secondary_Diagnosis_1__c</fullName>
        <description>This field is used to store the SD2 Condition Description Value.</description>
        <formula>Lead__r.SD2_Condition_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Secondary Diagnosis 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Secondary_Diagnosis_2__c</fullName>
        <formula>Lead__r.SD3_Condition_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Secondary Diagnosis 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Secondary_Diagnosis_3__c</fullName>
        <formula>Lead__r.SD4_Condition_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Secondary Diagnosis 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Secondary_Diagnosis__c</fullName>
        <description>This field is used to store the SD2 Condition Description Value</description>
        <formula>Lead__r.SD1_Condition_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Secondary Diagnosis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Why_do_you_feel__c</fullName>
        <formula>Lead__r.Why_do_you_feel_would_be_eligible_Wish__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Why do you feel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Child_City__c</fullName>
        <description>This field is used to store the wish child city information. its created to send an email purpose.</description>
        <formula>Contact.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Wish Child City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Child_Country_Code__c</fullName>
        <description>This field is used to store the wish child country code information. its created to send an email purpose.</description>
        <formula>TEXT(Contact.MailingCountryCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Wish Child Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Child_Full_Name__c</fullName>
        <description>This Hidden field is created for send an email when when the case sub status is &quot;Abandoned&quot;.</description>
        <formula>Contact.FirstName + &apos; &apos; +  Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Wish Child Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Child_Postalcode__c</fullName>
        <description>This field is used to store the wish child postal code information. its created to send an email purpose.</description>
        <formula>Contact.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Wish Child Postalcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Child_StateCode__c</fullName>
        <description>This field is used to store the wish child state information. its created to send an email purpose.</description>
        <formula>TEXT(Contact.MailingStateCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Wish Child StateCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Child_Street__c</fullName>
        <description>This field is used to store the wish child street information. and its created for email purpose.</description>
        <formula>Contact.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Wish Child Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is used to lock the record when the sub status is &quot;Abandoned&quot;.</description>
        <label>IsLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_MCA_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field is Used to populate the Medical Contact values from Contact.</description>
        <label>Chapter Medical Advisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MAC_Email__c</fullName>
        <description>This field is used to store the MAC email values from Account.</description>
        <label>Chapter Medical Advisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Medical_Condition__c</fullName>
        <formula>Contact.Medical_Condition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medical Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rush_Explanation__c</fullName>
        <description>If the Rush checkbox checked we need to explain the reason for why this wish need to process quicker</description>
        <label>Rush Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rush_Timeframe__c</fullName>
        <description>This filed value indicates time line for the wish process</description>
        <label>Rush Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>ASAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31-90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>91+</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rush__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify whether the wish is need to process quicker or not</description>
        <label>Rush</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <description>This field will be used to know the progress(Current status) of the wish</description>
        <label>Sub Status</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age Expiration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assign in Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Delay Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss of Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Viewable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Hour_Spent_Hidden__c</fullName>
        <description>This field is used to store the value of total hour spent by the volunteer opportunity to complete this task.</description>
        <label>Total Hour Spent Hidden</label>
        <precision>13</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hour_Spent__c</fullName>
        <label>Total Hour Spent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOlunteer_Manager_Name__c</fullName>
        <description>This field will holds the volunteer manager name</description>
        <label>Volunteer Manager Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Manager_Email__c</fullName>
        <description>This field will holds the email of the volunteer manager</description>
        <label>Volunteer Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Wish_type__c</fullName>
        <description>It holds the details about the  type of wish</description>
        <label>Wish type</label>
        <picklist>
            <picklistValues>
                <fullName>Cruise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GKTW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isApprove__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is used to identify whether the wish is approved or not</description>
        <label>isApprove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNational__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to verify weather the email has been set to National team or not.</description>
        <label>isNational</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Alabama_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Alabama</label>
        <queue>Alabama</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alaska_Washington_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Alaska &amp; Washington</label>
        <queue>Alaska_Washington</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Arizona_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Arizona</label>
        <queue>Arizona</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_California_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Central California</label>
        <queue>Central_California</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_New_York_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Central New York</label>
        <queue>Central_New_York</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_Northern_Florida_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Central &amp; Northern Florida</label>
        <queue>Central_Northern_Florida</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_South_Texas_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Central &amp; South Texas</label>
        <queue>Central_South_Texas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_Western_North_Carolina_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Central &amp; Western North Carolina</label>
        <queue>Central_Western_North_Carolina</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Colorado_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Colorado</label>
        <queue>Colorado</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Connecticut_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Connecticut</label>
        <queue>Connecticut</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>East_Tennessee_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>East Tennessee</label>
        <queue>East_Tennessee</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Eastern_North_Carolina_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Eastern North Carolina</label>
        <queue>Eastern_North_Carolina</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Georgia_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Georgia</label>
        <queue>Georgia</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Greater_Bay_Area_Case</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Chapter_Name__c</field>
            <operation>equals</operation>
            <value>Greater Bay Area</value>
        </filters>
        <label>Greater Bay Area</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>Greater_Bay_Area</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Diagnosis_Verification_Review</fullName>
        <active>true</active>
        <businessProcess>Diagnosis Verification Support Process</businessProcess>
        <description>It display Part A information</description>
        <label>Diagnosis Verification Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wish</fullName>
        <active>true</active>
        <businessProcess>Parent Wish Support process</businessProcess>
        <description>It will display the child and  parent related information.</description>
        <label>Wish</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wish_Assist</fullName>
        <active>true</active>
        <businessProcess>Case Support Process</businessProcess>
        <description>It will display the  assistance activity related to the wishes.</description>
        <label>Wish Assist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wish_Determination</fullName>
        <active>true</active>
        <businessProcess>Case Support Process</businessProcess>
        <description>It will display the information about the child wish.</description>
        <label>Wish Determination</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wish_Effect</fullName>
        <active>true</active>
        <businessProcess>Case Support Process</businessProcess>
        <description>It will display the wish closed information.</description>
        <label>Wish Effect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wish_Granted</fullName>
        <active>true</active>
        <businessProcess>Case Support Process</businessProcess>
        <description>It will display the wish granting information about the wishes.</description>
        <label>Wish Granted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wish_Planning_Anticipation</fullName>
        <active>true</active>
        <businessProcess>Case Support Process</businessProcess>
        <description>It will display the planning and budgeting information for the wishes.</description>
        <label>Wish Planning &amp; Anticipation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Case_Ready_to_Assign_Validation</fullName>
        <active>true</active>
        <description>When the case status is Ready to Assign the sub status should have value</description>
        <errorConditionFormula>Text(Status) == &apos;Ready to Assign&apos; &amp;&amp; Text(Sub_Status__c) == Null</errorConditionFormula>
        <errorDisplayField>Sub_Status__c</errorDisplayField>
        <errorMessage>You should enter value for sub status when status having values as Ready to Assign</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_Rush_Validation</fullName>
        <active>true</active>
        <description>This validation rule will fire if the Rush Timeframe &amp; Rush Explanation fields are not having values when the Rush is checked</description>
        <errorConditionFormula>AND(Rush__c = TRUE,
    OR(Text(Rush_Timeframe__c) == Null,
     ISBLANK(Rush_Explanation__c))
)</errorConditionFormula>
        <errorMessage>Please enter values to &apos;Rush Explanation &amp; Rush Timeframe&apos;  fields in order  to check Rush.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Wish_Close</fullName>
        <active>true</active>
        <description>Restrict &apos;Intern&apos; Profile Users to closing a wish</description>
        <errorConditionFormula>AND($Profile.Name = &apos;Intern&apos;,ISPICKVAL( Status , &apos;Closed&apos;))</errorConditionFormula>
        <errorMessage>You don&apos;t have access to close the wish</errorMessage>
    </validationRules>
</CustomObject>